--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
     <div class="wrapper">
-      <header class="without-description">
+      <header>
         <h1>Roadmap</h1>
         <p></p>
+
         <p class="view"><a href="https://github.com/rcquan/roadmap">View the Project on GitHub <small>rcquan/roadmap</small></a></p>
+
+
         <ul>
           <li><a href="https://github.com/rcquan/roadmap/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/rcquan/roadmap/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -27,44 +28,65 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" class="anchor" href="#mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mental Health and Substance Use in New York City: Burden, Cost, and Return on Investment</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>To download the project files, click the <code>Download .ZIP</code> button to the left.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a id="piece-1-estimating-dalys-and-costs-due-to-mental-illness-and-substance-use-in-new-york-city" class="anchor" href="#piece-1-estimating-dalys-and-costs-due-to-mental-illness-and-substance-use-in-new-york-city" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 1. Estimating DALYs and costs due to mental illness and substance use in New York City</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>The primary goal of our analysis is to understand the burden and costs associated with mental illness in New York City (NYC). The disability-adjusted life year is an estimate of healthy life lost to disability, and is conceptually equivalent to one year of life lived in perfect health. The DALY creates an estimate of morbidity that is equal to mortality by “weighting” the time one spends with a disability such that a year of life with a disability is some fraction of a year of life lived in perfect health. The basic formula for estimating DALYs lost to mental illness involves summing the years of life lost to disability (YLD) and the years of life lost (YLL). Thus, if a person with schizophrenia has a DALY score of 0.36, then every year of life she lives with schizophrenia is equal to 0.36 of a year of life lived in perfect health. To estimate DALYs, we therefore need the following information:</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<ul>
+<li>Mean age of onset (this is similar across developed nations and can be obtained from the literature)</li>
+<li>Disease prevalence (via NYC HANES), coupled with demographically-weighted smoothed estimates</li>
+<li>The DALY score (this can be obtained from the 2010 Global Burden of Disease study)</li>
+<li>Mortality hazards or other estimates of years of life lost (from the literature)</li>
+</ul>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>The DOHMH has specifically asked for a ranking of mental illness among other conditions. To fulfill this request, we will need to analyze a set of other common conditions, as well. These will include other high burden diseases, including heart disease, cancer, accidents, stroke, and COPD. This analysis will involve replicating the analyses from the 2011 Global Burden of Disease report for established market economies, but substituting the prevalence data for New York City. We will incorporate smoothing approaches to align with the goal of small-area DALY estimates in the setting of limited prevalence data.</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>To estimate the economic burden of psychopathology, we will calculate the costs associated with:</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Lost productivity time, lost leisure time. These two costs are valued together at the median wage and are summed over 24 hours/365 days/year.</li>
+<li>Medical costs. These can either be calculated from scratch using billing/payer data (NYC SPARC data) or can be estimated on a per capita basis from the literature and then adjusted to 2014 New York City costs using a medical inflation index and relative cost data.</li>
+<li>Social services costs. Mental illness places a huge burden on the city’s social service infrastructure, including housing services.</li>
+<li>Policing/incarceration costs. These can be captured via the literature and via criminal justice databases. The cost is calculated by multiplying the attributable fraction of all criminal justice system contacts due to mental illness by the total criminal justice system costs to New York City.</li>
+<li>Caregiving costs. We will here leverage the literature regarding the economic costs due to caregiving and lost productivity of caregivers to estimate the potential costs of caregiving for mental illness in the City. </li>
+</ul>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="piece-2-mapping-the-burdenpreventable-burden-treatable-burden-and-disparities-in-psychopathology-and-substance-use-in-nyc" class="anchor" href="#piece-2-mapping-the-burdenpreventable-burden-treatable-burden-and-disparities-in-psychopathology-and-substance-use-in-nyc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 2. Mapping the burden,‘preventable burden’, ‘treatable burden’ and disparities in psychopathology and substance use in NYC</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>GRAPH unites a team with expertise in health policy, biostatistics, and epidemiology. We have previously conducted a systematic review of the prevention science literature against leading causes of death, including suicide, alcohol, and drug abuse. Capitalizing on this diverse expertise and experience, we aim to extend the above analyses to ‘tell the story’ of mental health and substance use in NYC.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>In addition to calculating the burden and costs of psychopathology in New York City in piece 1, we aim to pursue a series of analyses to advance our understanding of meaningful treatment and prevention policy to address this burden and deliver the potential return on these investments to public and private payers. In that respect, we aim to perform several targeted analyses toward the following aims:</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>To extend our systematic review of rigorous, efficacious primary prevention interventions against leading causes of death to leading causes of psychopathology, including mood and anxiety disorders and psychosis, and substance use, including alcohol and drugs;</p>
+
+<ul>
+<li>To calculate the ‘preventable burden’ of psychopathology if rigorous, efficacious primary prevention interventions were applied across New York City, as well as the ‘treatable burden’ of psychopathology if funding for evidence-based treatment were extended throughout the City;</li>
+<li>To map both the burden, preventable burden, treatable burden, and disparities of psychopathology and substance use in New York City. While mapping granularity is limited by the quality of extant data, we hope to map to the zipcode level combining fine-area estimates and demographic smoothing where appropriate.</li>
+</ul>
+
+<h2>
+<a id="piece-3-psychopathology-and-the-costs-of-medical-care-in-nyc" class="anchor" href="#piece-3-psychopathology-and-the-costs-of-medical-care-in-nyc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 3. Psychopathology and the costs of medical care in NYC</h2>
+
+<p>The NYC DOMH is interested in understand the contribution of psychopathology to medical care costs for care across high burden diseases in NYC among patients enrolled in public healthcare plans (Medicare and Medicaid). Therefore, in addition to directly pursuing the analyses outlined in pieces 1 and 2 above, we will also work directly with the DOMH team to advise on medical care cost analyses, on which our investigative team has expertise and experience.</p>
+
+<h2>
+<a id="timeline" class="anchor" href="#timeline" aria-hidden="true"><span class="octicon octicon-link"></span></a>Timeline</h2>
+
+<p>The NYC DOMH would like to publish this report in the second quarter or 2015. In that respect, we aim to pursue a staged analysis. We aim to begin in February 2015. In that respect, we will complete analyses toward Pieces 1 and 2 by April 15th, working with colleagues at DOHMH throughout toward Piece 3 throughout our timeline.</p>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/rcquan">rcquan</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/rcquan">rcquan</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
