--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Roadmap by rcquan</title>
+    <meta name="description" content="Roadmap : ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Roadmap</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Roadmap</h1>
-        <p></p>
 
-        <p class="view"><a href="https://github.com/rcquan/roadmap">View the Project on GitHub <small>rcquan/roadmap</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/rcquan/roadmap">View on GitHub</a>
 
+          <h1 id="project_title">Roadmap</h1>
+          <h2 id="project_tagline"></h2>
 
-        <ul>
-          <li><a href="https://github.com/rcquan/roadmap/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/rcquan/roadmap/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/rcquan/roadmap">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/rcquan/roadmap/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/rcquan/roadmap/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" class="anchor" href="#mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mental Health and Substance Use in New York City: Burden, Cost, and Return on Investment</h1>
 
-<p>To download the project files, click the <code>Download .ZIP</code> button to the left.</p>
-
 <h2>
-<a id="piece-1-estimating-dalys-and-costs-due-to-mental-illness-and-substance-use-in-new-york-city" class="anchor" href="#piece-1-estimating-dalys-and-costs-due-to-mental-illness-and-substance-use-in-new-york-city" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 1. Estimating DALYs and costs due to mental illness and substance use in New York City</h2>
+<a id="proposal" class="anchor" href="#proposal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proposal</h2>
+
+<h3>
+<a id="piece-1-estimating-dalys-and-costs-due-to-mental-illness-and-substance-use-in-new-york-city" class="anchor" href="#piece-1-estimating-dalys-and-costs-due-to-mental-illness-and-substance-use-in-new-york-city" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 1. Estimating DALYs and costs due to mental illness and substance use in New York City</h3>
 
 <p>The primary goal of our analysis is to understand the burden and costs associated with mental illness in New York City (NYC). The disability-adjusted life year is an estimate of healthy life lost to disability, and is conceptually equivalent to one year of life lived in perfect health. The DALY creates an estimate of morbidity that is equal to mortality by “weighting” the time one spends with a disability such that a year of life with a disability is some fraction of a year of life lived in perfect health. The basic formula for estimating DALYs lost to mental illness involves summing the years of life lost to disability (YLD) and the years of life lost (YLL). Thus, if a person with schizophrenia has a DALY score of 0.36, then every year of life she lives with schizophrenia is equal to 0.36 of a year of life lived in perfect health. To estimate DALYs, we therefore need the following information:</p>
 
@@ -57,8 +61,8 @@
 <li>Caregiving costs. We will here leverage the literature regarding the economic costs due to caregiving and lost productivity of caregivers to estimate the potential costs of caregiving for mental illness in the City. </li>
 </ul>
 
-<h2>
-<a id="piece-2-mapping-the-burdenpreventable-burden-treatable-burden-and-disparities-in-psychopathology-and-substance-use-in-nyc" class="anchor" href="#piece-2-mapping-the-burdenpreventable-burden-treatable-burden-and-disparities-in-psychopathology-and-substance-use-in-nyc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 2. Mapping the burden,‘preventable burden’, ‘treatable burden’ and disparities in psychopathology and substance use in NYC</h2>
+<h3>
+<a id="piece-2-mapping-the-burdenpreventable-burden-treatable-burden-and-disparities-in-psychopathology-and-substance-use-in-nyc" class="anchor" href="#piece-2-mapping-the-burdenpreventable-burden-treatable-burden-and-disparities-in-psychopathology-and-substance-use-in-nyc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 2. Mapping the burden,‘preventable burden’, ‘treatable burden’ and disparities in psychopathology and substance use in NYC</h3>
 
 <p>GRAPH unites a team with expertise in health policy, biostatistics, and epidemiology. We have previously conducted a systematic review of the prevention science literature against leading causes of death, including suicide, alcohol, and drug abuse. Capitalizing on this diverse expertise and experience, we aim to extend the above analyses to ‘tell the story’ of mental health and substance use in NYC.</p>
 
@@ -71,22 +75,85 @@
 <li>To map both the burden, preventable burden, treatable burden, and disparities of psychopathology and substance use in New York City. While mapping granularity is limited by the quality of extant data, we hope to map to the zipcode level combining fine-area estimates and demographic smoothing where appropriate.</li>
 </ul>
 
-<h2>
-<a id="piece-3-psychopathology-and-the-costs-of-medical-care-in-nyc" class="anchor" href="#piece-3-psychopathology-and-the-costs-of-medical-care-in-nyc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 3. Psychopathology and the costs of medical care in NYC</h2>
+<h3>
+<a id="piece-3-psychopathology-and-the-costs-of-medical-care-in-nyc" class="anchor" href="#piece-3-psychopathology-and-the-costs-of-medical-care-in-nyc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Piece 3. Psychopathology and the costs of medical care in NYC</h3>
 
 <p>The NYC DOMH is interested in understand the contribution of psychopathology to medical care costs for care across high burden diseases in NYC among patients enrolled in public healthcare plans (Medicare and Medicaid). Therefore, in addition to directly pursuing the analyses outlined in pieces 1 and 2 above, we will also work directly with the DOMH team to advise on medical care cost analyses, on which our investigative team has expertise and experience.</p>
 
-<h2>
-<a id="timeline" class="anchor" href="#timeline" aria-hidden="true"><span class="octicon octicon-link"></span></a>Timeline</h2>
+<h3>
+<a id="timeline" class="anchor" href="#timeline" aria-hidden="true"><span class="octicon octicon-link"></span></a>Timeline</h3>
 
 <p>The NYC DOMH would like to publish this report in the second quarter or 2015. In that respect, we aim to pursue a staged analysis. We aim to begin in February 2015. In that respect, we will complete analyses toward Pieces 1 and 2 by April 15th, working with colleagues at DOHMH throughout toward Piece 3 throughout our timeline.</p>
+
+<h1>
+<a id="analytic-plan" class="anchor" href="#analytic-plan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Analytic Plan</h1>
+
+<p>The objective of this analysis is to estimate DALYs lost and economic losses due to the following major categories of conditions (with about 100 conditions in total within these categories):</p>
+
+<ol>
+<li>Major depression</li>
+<li>Alcohol</li>
+<li>Marijuana use</li>
+<li>Heroin use</li>
+<li>Cocaine use</li>
+<li>Stimulant/hallucinogen use</li>
+<li>Sedative tranquilizer use</li>
+</ol>
+
+<p>For this analysis, we will need 7 major pieces of data for each of these major categories. It will not be possible to estimate economic losses for all 100 conditions because there will not be adequate data. The data we will require are as follows:</p>
+
+<ol>
+<li>Disease prevalence</li>
+<li>Age-, gender-, and race-specific mortality rates for New York City.</li>
+<li>Age-, gender-, and race-specific mean age of onset for each condition listed above.</li>
+<li>Lost productivity and leisure time</li>
+<li>Medical system costs</li>
+<li>Criminal justice system costs/social service costs</li>
+<li>Prevention effectiveness</li>
+</ol>
+
+<p>These data will be used to estimate the following elements.</p>
+
+<ol>
+<li><p><strong>Interactive disease prevalence data maps</strong>. This will be supplied by the NYCDOHMH for the smallest geographic units of analysis possible. For each unit, we will need roughly 100 cases in the numerator as a minimum. We can use blurring or other techniques to obtain estimates. These estimates should be available from their 2011 analysis. We will require these data for 5 age groups (0-4, 5-14, 15-24, 25-44, 45-64, 65-75, 75+). The challenge is that the NYCHANES and NSDH data are very out of date and the n is too low in both surveys. To increase their utility, we should use childhood (0-14), late adolescence/early adulthood (15-24), adulthood (25-64), and later life (65+). We will need to do a literature and data review to see what kinds of other surveys might be out there for NYC. </p></li>
+<li><p><strong>DALYs</strong>. The DALY is a year of life lived in perfect health and consists of two elements: 1) YLL (years of life lost) and 2) YLD (years lost to disability).  We can estimate DALYs using NYC mortality counts stratified by age, sex, and race to compute YLL using 2013 mortality data and mean age of onset from the previous NYCDOHMH study. For YLLs, we will need 2010 disability weights and the mean age of onset. The following elements may be obtained from the GBD data:</p></li>
+</ol>
+
+<ul>
+<li>Duration stratified by sex and age groups (national and GBD study)</li>
+<li>RR mortality stratified by sex and age groups (national and GBD study)</li>
+<li>Remission rate (national and GBD study). We should do a literature review here to see if there are any data from NYC. Rufina Lee has data on intervention impacts on remission rates for NYC. This can be used to estimate the CEA of prevention effectiveness data and burden of disease.</li>
+<li>Case fatality (national and GBD study)</li>
+<li>Disability weight used in the GBD 2010 study</li>
+</ul>
+
+<p>The NYCDOHMH previously estimated YLD based mainly on national rates where 1) YLD = (YLD/YLL from national study) * (YLL from NYC mortality data); 2) YLD = (YLD/YLL from national study) * (NYC population ). We should just repeat this with 2013 mortality data and 2010 rates. Where we can find them, we should also modify the prevalence data and other data elements for NYC.</p>
+
+<ol>
+<li>
+<strong>Costs</strong>. The cost data merely need to be collected from literature reviews. To standardize these, we need to extract the total lost productivity and leisure time losses for active disease. These are then multiplied by median local wage for New York City and by the duration of the disease from the GBD study. Medical costs need to be separately extracted and adjusted to reflect NYC costs. We need to be careful to separate out studies that use charges from those that use costs. Those that use charges need to be adjusted to costs. My textbook has these tables in the back. All costs need to be adjusted to 2014 dollars using the consumer price index.</li>
+</ol>
+
+<p>The Uniform Crime Reports has the total costs of incarceration. We need to figure out the percentage of these are linked to mental illness/substance abuse from the literature.</p>
+
+<p>We need to get an estimate of social service utilization. I believe we can get these from Robin Hood.</p>
+
+<ol>
+<li>
+<strong>Program effectiveness</strong>.  We need to obtain the cost of prevention programs and their impact on the duration of illness from Rufina Lee. We can’t get estimates of impacts on YLLs. In my opinion, we should assume that these are between zero and 100% and report them as a sensitivity analysis.</li>
+</ol>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/rcquan">rcquan</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Roadmap maintained by <a href="https://github.com/rcquan">rcquan</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
