Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Roadmap : ">
+    <title>Roadmap by rcquan</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Roadmap</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Roadmap</h1>
+        <p></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/rcquan/roadmap">View on GitHub</a>
+        <p class="view"><a href="https://github.com/rcquan/roadmap">View the Project on GitHub <small>rcquan/roadmap</small></a></p>
 
-          <h1 id="project_title">Roadmap</h1>
-          <h2 id="project_tagline"></h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/rcquan/roadmap/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/rcquan/roadmap/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/rcquan/roadmap/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/rcquan/roadmap/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/rcquan/roadmap">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" class="anchor" href="#mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mental Health and Substance Use in New York City: Burden, Cost, and Return on Investment</h1>
 
@@ -143,17 +140,12 @@
 <strong>Program effectiveness</strong>.  We need to obtain the cost of prevention programs and their impact on the duration of illness from Rufina Lee. We can’t get estimates of impacts on YLLs. In my opinion, we should assume that these are between zero and 100% and report them as a sensitivity analysis.</li>
 </ol>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Roadmap maintained by <a href="https://github.com/rcquan">rcquan</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/rcquan">rcquan</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
