Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <h1>
 <a id="mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" class="anchor" href="#mental-health-and-substance-use-in-new-york-city-burden-cost-and-return-on-investment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mental Health and Substance Use in New York City: Burden, Cost, and Return on Investment</h1>
 
+<blockquote>
+<p>To download the project files, click the <code>Download ZIP Files</code> button to the left.</p>
+</blockquote>
+
 <h2>
 <a id="proposal" class="anchor" href="#proposal" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proposal</h2>
 
